PR c/42312 * config/mep/mep.c (mep_expand_prologue): Set really_need_stack_frame after frame_size is set.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155072 138bc75d-0d04-0410-961f-82ee72b054a4